--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
+    "shortid": "^2.2.15",
     "validator": "^13.1.17"
   },
   "devDependencies": {
